# cielo-azure

./: AGENTS.md  DesignSpec.md  README.md  pyproject.toml
cielo_azure/: __init__.py
cielo_azure/cli/: main.py
cielo_azure/core/: auth.py  base_fetcher.py
cielo_azure/fetchers/: virtual_machine_fetcher.py
cielo_azure/models/: virtual_machine.py
cielo_azure/tests/: test_virtual_machine_fetcher.py
